# My-Projects

./: genpass.rar  pythonProject3.rar
C++/GUI/Calculator/: calculator.cpp  calculator.h  calculator.ui  main.cpp
C++/GUI/Proiect_Sudoku_Solver/: Documentatie.docx
C++/GUI/Proiect_Sudoku_Solver/docu/: Documentatie.docx
C++/GUI/Proiect_Sudoku_Solver/fata_sudo/: CMakeLists.txt  fata_sudo.cbp  fata_sudo.depend  fata_sudo.layout  main.cpp
C++/NO GUI/Lab2/: Lab2.depend  Lab2.layout  main.c
Proiecte Python/: pythonProject.rar
Proiecte Python/detect_f/: detect_f.py
cam/: main.py
