cmake_minimum_required(VERSION 3.24)
project(fata_sudo)

set(CMAKE_CXX_STANDARD 14)

add_executable(fata_sudo
        bin/Debug/1.bmp
        bin/Debug/10.bmp
        bin/Debug/11.bmp
        bin/Debug/12.bmp
        bin/Debug/13.bmp
        bin/Debug/14.bmp
        bin/Debug/15.bmp
        bin/Debug/16.bmp
        bin/Debug/2.bmp
        bin/Debug/3.bmp
        bin/Debug/4.bmp
        bin/Debug/5.bmp
        bin/Debug/6.bmp
        bin/Debug/7.bmp
        bin/Debug/8.bmp
        bin/Debug/9.bmp
        bin/Debug/back.bmp
        bin/Debug/button.bmp
        bin/Debug/Capture.bmp
        bin/Debug/Capture2.bmp
        bin/Debug/Capture3.bmp
        bin/Debug/exit.bmp
        bin/Debug/fata_sudo.exe
        bin/Debug/fata_sudo.sys
        bin/Debug/help.bmp
        bin/Debug/icon.bmp
        bin/Debug/start.bmp
        bin/Debug/titlu.bmp
        bin/Debug/txt.bmp
        bin/Release/fata_sudo.exe
        main.cpp)
